--- a/BSM Reborn/gtk-3.0/gtk-main.css
+++ b/BSM Reborn/gtk-3.0/gtk-main.css
@@ -3,7 +3,7 @@
 @define-color fg_color #4c4c4c;
 @define-color base_color #ffffff;
 @define-color text_color #3C3C3C;
-@define-color selected_bg_color #4C4C4C;
+@define-color selected_bg_color #949494;
 @define-color selected_fg_color #ffffff;
 @define-color tooltip_bg_color #000000;
 @define-color tooltip_fg_color #ffffff;
@@ -24,6 +24,7 @@
 @define-color error_fg_color rgb (235, 235, 235);
 @define-color error_bg_color rgb (223, 56, 44);
 @define-color link_color @selected_bg_color;
+/*@define-color success_color #4e9a06;*/
 @define-color success_color #4e9a06;
 @define-color error_color #df382c;
 
